@@ -76,6 +76,10 @@ void program_startup()
     unsigned char *bss_end=&_bss_end;
     #ifndef __CODE_IN_XRAM
     memcpy(data, etext, edata-data);
+    #else //__CODE_IN_XRAM
+    (void)etext; //Avoid unused variable warning
+    (void)data;
+    (void)edata;
     #endif //__CODE_IN_XRAM
     memset(bss_start, 0, bss_end-bss_start);
 
