@@ -1,3 +1,29 @@
+/***************************************************************************
+ *   Copyright (C) 2011 by Terraneo Federico                               *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ *   This program is distributed in the hope that it will be useful,       *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+ *   GNU General Public License for more details.                          *
+ *                                                                         *
+ *   As a special exception, if other files instantiate templates or use   *
+ *   macros or inline functions from this file, or you compile this file   *
+ *   and link it with other works to produce a work based on this file,    *
+ *   this file does not by itself cause the resulting work to be covered   *
+ *   by the GNU General Public License. However the source code for this   *
+ *   file must still be made available in accordance with the GNU General  *
+ *   Public License. This exception does not invalidate any other reasons  *
+ *   why a work based on this file might be covered by the GNU General     *
+ *   Public License.                                                       *
+ *                                                                         *
+ *   You should have received a copy of the GNU General Public License     *
+ *   along with this program; if not, see <http://www.gnu.org/licenses/>   *
+ ***************************************************************************/
 
 #ifndef SOFTWARE_SPI_H
 #define	SOFTWARE_SPI_H
@@ -50,7 +76,7 @@ public:
      * \param data to send
      * \return data received
      */
-    //static unsigned int sendRecvLong(unsigned int data);
+    static unsigned int sendRecvLong(unsigned int data);
 
     /**
      * Pull CE low, indicating transmission start.
@@ -91,6 +117,26 @@ unsigned short SoftwareSPI<SI,SO,SCK,CE,numNops>::
     for(int i=0;i<16;i++)
     {
         if(data & 0x8000) SO::high();
+        SCK::high();
+        data<<=1;
+		result<<=1;
+        if(SI::value()) result |= 0x1;
+        for(int j=0;j<numNops;j++) asm volatile("nop");
+        SCK::low();
+        for(int j=0;j<numNops;j++) asm volatile("nop");
+        SO::low();
+    }
+    return result;
+}
+
+template<typename SI, typename SO, typename SCK, typename CE, unsigned numNops>
+unsigned int SoftwareSPI<SI,SO,SCK,CE,numNops>::
+        sendRecvLong(unsigned int data)
+{
+    unsigned int result;
+    for(int i=0;i<32;i++)
+    {
+        if(data & 0x80000000) SO::high();
         SCK::high();
         data<<=1;
 		result<<=1;
